--- a/HELMET/src/index.html
+++ b/HELMET/src/index.html
@@ -1,7 +1,2 @@
 <html>
-    <body>
-        <h1>
-            <iframe src="https://twitter.com/"><iframe>
-        </h1>
-    </body>
-</html>
+/html>
