Feat: revamping html

--- a/HELMET/src/index.html
+++ b/HELMET/src/index.html
@@ -1,2 +1,16 @@
 <html>
-/html>
+
+<head> 
+  <meta charset="UTF-8">
+  <title>Bungie Stuff </title>
+
+  </head>
+
+  <body>
+
+
+  <script src="./request.ts"></script>
+
+  </body>
+  
+</html>
